tests/invalid/comprehension_tuple_target_attr_call_unsupported/main.py
class Box:
    def make(self) -> int:
        return 5


def run_case() -> None:
    out: list[int] = [x for x in Box().make()]
    print(out)


if __name__ == "__main__":
    run_case()
